--- a/css/style.css
+++ b/css/style.css
@@ -201,3 +201,72 @@
 
 
 /*footer section*/
+.footer{
+    background-color: #151414;
+    color: #FFFFFF;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    margin-top: 130px;
+    padding-top: 130px;
+    padding-bottom: 130px;
+}
+
+.footer-about{
+
+}
+
+.footer-about-title{
+    font-weight: 700;
+    font-size: 45px;
+    margin-bottom: 16px;
+}
+
+.footer-about-details{
+    font-weight: 400;
+    font-size: 16px;
+    margin-bottom: 24px;
+
+}
+
+.footer-about-icons{
+
+}
+.icon{
+    height: 46px;
+    width: 46px;
+}
+
+
+.footer-subscription{
+
+}
+
+.footer-subscription-title{
+    font-weight: 600;
+    font-size: 25px;
+    margin-bottom: 31px;
+}
+
+.footer-subscription-email{
+    background-color: #151414;
+    color: #FFFFFF;
+    font-weight: 400;
+    font-size: 18px;
+    border: 1px solid #FFFFFF;
+    border-radius: 8px;
+    width: 325px;
+    height: 64px;
+    padding-left: 20px;
+}
+
+.footer-subscription-btn{
+    height: 64px;
+    padding: 10px 35px;
+    border-radius:5px;
+    border: 0;
+    background-color: #FFFFFF;
+    color: #F15B22;
+    font-size: 20px;
+    font-weight: 600;
+}
